# maf-graphrag-series

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_agent.py  run_index.ps1  run_mcp_server.py  run_query.ps1  run_workflow.py  settings.yaml
.github/workflows/: ci.yml
agents/: README.md  __init__.py  config.py  supervisor.py
core/: README.md  __init__.py  config.py  data_loader.py  example.py  index.py  indexer.py  search.py
docs/: README.md  lessons-learned.md  multi-region-architecture.md  part1-implementation-notes.md  part2-implementation-notes.md  part3-implementation-notes.md  part4-implementation-notes.md  poetry-guide.md  qa-examples.md  query-guide.md
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
infra/bootstrap/: README.md  main.tf  terraform.tfvars.example
input/: README.md
input/documents/: README.md  company_events_timeline.md  company_org.md  customers_partners.md  engineering_processes.md  incidents_postmortems.md  project_alpha.md  project_beta.md  team_members.md  technical_architecture.md  technology_stack.md
mcp_server/: README.md  config.py  server.py
mcp_server/tools/: __init__.py  entity_query.py  global_search.py  local_search.py  source_resolver.py
notebooks/: 01_explore_graph.ipynb  02_test_mcp_server.ipynb  README.md
prompts/: community_report_graph.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  summarize_descriptions.txt
src/: README.md  global_search.py  indexer.py  local_search.py
src/agents/: README.md  __init__.py  config.py  middleware.py  prompts.py  supervisor.py  tools.py
src/core/: README.md  __init__.py  config.py  data_loader.py  example.py  index.py  indexer.py  search.py
src/evaluation/: .gitignore  README.md  __init__.py  config.py
src/evaluation/datasets/: golden_questions.jsonl
src/evaluation/evaluators/: __init__.py  builtin.py  entity_accuracy.py  relationship_validity.py
src/evaluation/monitoring/: __init__.py  otel_setup.py
src/evaluation/scripts/: __init__.py  generate_eval_data.py  run_batch_evaluation.py  run_redteam.py
src/mcp_server/: README.md  __init__.py  config.py  server.py
src/mcp_server/tools/: __init__.py  _data_cache.py  entity_query.py  global_search.py  local_search.py  source_resolver.py  types.py
src/workflows/: README.md  __init__.py  base.py  concurrent.py  handoff.py  sequential.py
tests/: test_agents_config.py  test_core_config.py  test_mcp_config.py  test_workflows_base.py
tests/agents/: test_middleware.py  test_multi_provider.py  test_supervisor.py  test_tools.py
tests/core/: test_data_loader.py
tests/evaluation/: test_builtin_evaluators.py  test_config.py  test_custom_evaluators.py  test_monitoring.py  test_run_redteam.py
tests/mcp_server/tools/: test_data_cache.py  test_entity_query.py  test_global_search.py  test_local_search.py  test_source_resolver.py  test_types.py
tests/workflows/: test_base.py  test_factories.py
workflows/: concurrent.py  handoff.py  sequential.py
